@@ -162,11 +162,17 @@ elif [[ $1 == "up" || $1 == "provision" ]]; then
   fi
 
   if [ ! -z $externaldrupal_remote ]; then
-    if [ ! -d "drupal/current" ]; then
+    if [ ! -z $externaldrupal_location ]; then
+      DRUPALLOCATION=$externaldrupal_location
+    else
+      DRUPALLOCATION="drupal/current"
+    fi
+    if [ ! -d $DRUPALLOCATION ]; then
+      mkdir -p $ROOT/$DRUPALLOCATION
       if [ -z $externaldrupal_branch ]; then
         $externaldrupal_branch = 'master'
       fi
-      git clone -b $externaldrupal_branch $externaldrupal_remote $ROOT/drupal/current
+      git clone -b $externaldrupal_branch $externaldrupal_remote $ROOT/$DRUPALLOCATION
     fi
   fi
 fi
